--- a/index.html
+++ b/index.html
@@ -1,11 +1,368 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Assignment 04</title>
+ <!-- Font Awesome -->
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+  integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+  crossorigin="anonymous" referrerpolicy="no-referrer" />
+ <!-- Tailwind -->
+ <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+ <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body>
+
+<body class="bg-base-200">
+ <header class="w-[80%] mx-auto">
+  <h1 class="text-5xl font-bold text-black-500 mb-4">Job Application Tracker</h1>
+  <div class="grid grid-cols-3 gap-8">
+   <div class="bg-white p-4">
+    <p>Total</p>
+    <p id="Total" class="font-bold">0</p>
+   </div>
+
+   <div class="bg-white p-4">
+    <p>Interview</p>
+    <p id="interviewCount" class="font-bold text-green-500">0</p>
+   </div>
+
+   <div class="bg-white p-4">
+    <p>Rejected</p>
+    <p id="rejectedCount" class="font-bold text-red-500">0</p>
+   </div>
+  </div>
+ </header>
+ <hr class="my-5">
+ <div class="flex w-[80%] mx-auto justify-between mb-4">
+  <div>
+   <h3 class="text-2xl font-bold">Available Jobs</h3>
+  </div>
+  <div>
+   <p>8 Jobs</p>
+  </div>
+ </div>
+
+
+
+ <main class="w-[80%] mx-auto">
+
+  <div class="mb-5">
+   <button onclick="toggleStyle('all-filter-btn')" class="bg-accent text-white px-5 py-2"
+    id="all-filter-btn">All</button>
+
+   <button onclick="toggleStyle('thriving-filter-btn')" class="bg-white px-5 py-2"
+    id="interview-filter-btn">Interview</button>
+
+   <button onclick="toggleStyle('struggling-filter-btn')" class="bg-white px-5 py-2"
+    id="rejected-filter-btn">Rejected</button>
+  </div>
+
+  <!-- <section id="filtered-section" class="hidden">
  
+     </section> -->
+
+  <section id="allCards" class="space-y-6">
+   <!-- card 1 -->
+   <div class="flex justify-between p-8 bg-white">
+    <!-- left site -->
+    <div class="space-y-6">
+     <div>
+      <h3 class="company-name text-2xl font-bold">Mobile First Corp</h3>
+      <p class="position-name">React Native Developer</p>
+     </div>
+
+     <div class="flex gap-2">
+      <p class="salary">Remote
+       •
+       Full-time
+       •
+       $130,000 - $175,000</p>
+     </div>
+
+     <p class="change bg-base-300 w-[120px]">Not Applied</p>
+     <p class="notes">Build cross-platform mobile applications using React Native. Work on products used by millions of
+      users worldwide.</p>
+
+     <div>
+      <button class="thriving-btn text-green-400 border px-4 py-2">Interview</button>
+      <button class="struggling-btn text-red-400 border px-4 py-2">Rejected</button>
+     </div>
+
+    </div>
+
+    <!-- right site -->
+    <div>
+     <button class="btn-delete px-4"><i class="fa-regular fa-trash-can"></i></button>
+    </div>
+   </div>
+
+   <!-- card 2 -->
+   <div class="flex justify-between p-8 bg-white">
+    <!-- left site -->
+    <div class="space-y-6">
+     <div>
+      <h3 class="company-name text-2xl font-bold">WebFlow Agency</h3>
+      <p class="position-name">Web Designer & Developer</p>
+     </div>
+
+     <div class="flex gap-2">
+      <p class="salary">Los Angeles, CA
+       •
+       Part-time
+       •
+       $80,000 - $120,000</p>
+     </div>
+
+     <p class="change bg-base-300 w-[120px]">Not Applied</p>
+     <p class="notes">Create stunning web experiences for high-profile clients. Must have portfolio and experience with
+      modern web design
+      trends.</p>
+
+     <div>
+      <button class="thriving-btn text-green-400 border px-4 py-2">Interview</button>
+      <button class="struggling-btn text-red-400 border px-4 py-2">Rejected</button>
+     </div>
+
+    </div>
+
+    <!-- right site -->
+    <div>
+     <button class="btn-delete px-4"><i class="fa-regular fa-trash-can"></i></button>
+    </div>
+   </div>
+
+   <!-- card 3 -->
+   <div class="flex justify-between p-8 bg-white">
+    <!-- left site -->
+    <div class="space-y-6">
+     <div>
+      <h3 class="company-name text-2xl font-bold">DataViz Solutions</h3>
+      <p class="position-name">Data Visualization Specialist</p>
+     </div>
+
+     <div class="flex gap-2">
+      <p class="salary">Boston, MA
+       •
+       Full-time
+       •
+       $125,000 - $165,000</p>
+     </div>
+
+     <p class="change bg-base-300 w-[120px]">Not Applied</p>
+     <p class="notes">Transform complex data into compelling visualizations. Required skills: D3.js, React, and strong
+      analytical thinking.
+      .</p>
+
+     <div>
+      <button class="thriving-btn text-green-400 border px-4 py-2">Interview</button>
+      <button class="struggling-btn text-red-400 border px-4 py-2">Rejected</button>
+     </div>
+
+    </div>
+
+    <!-- right site -->
+    <div>
+     <button class="btn-delete px-4"><i class="fa-regular fa-trash-can"></i></button>
+    </div>
+   </div>
+
+   <!-- card 4 -->
+   <div class="flex justify-between p-8 bg-white">
+    <!-- left site -->
+    <div class="space-y-6">
+     <div>
+      <h3 class="company-name text-2xl font-bold">CloudFirst Inc</h3>
+      <p class="position-name">Backend Developerv</p>
+     </div>
+
+     <div class="flex gap-2">
+      <p class="salary">Seattle, WA
+       •
+       Full-time
+       •
+       $140,000 - $190,000</p>
+     </div>
+
+     <p class="change bg-base-300 w-[120px]">Not Applied</p>
+     <p class="notes">Design and maintain scalable backend systems using Python and AWS. Work with modern DevOps
+      practices and cloud
+      infrastructure.</p>
+
+     <div>
+      <button class="thriving-btn text-green-400 border px-4 py-2">Interview</button>
+      <button class="struggling-btn text-red-400 border px-4 py-2">Rejected</button>
+     </div>
+
+    </div>
+
+    <!-- right site -->
+    <div>
+     <button class="btn-delete px-4"><i class="fa-regular fa-trash-can"></i></button>
+    </div>
+   </div>
+
+   <!-- card 5 -->
+   <div class="flex justify-between p-8 bg-white">
+    <!-- left site -->
+    <div class="space-y-6">
+     <div>
+      <h3 class="company-name text-2xl font-bold">Innovation Labs</h3>
+      <p class="position-name">UI/UX Engineer</p>
+     </div>
+
+     <div class="flex gap-2">
+      <p class="salary">Austin, TX
+       •
+       Full-time
+       •
+       $110,000 - $150,000</p>
+     </div>
+
+     <p class="change bg-base-300 w-[120px]">Not Applied</p>
+     <p class="notes">Create beautiful and functional user interfaces for our suite of products. Strong design skills
+      and frontend development
+      expertise required.</p>
+
+     <div>
+      <button class="thriving-btn text-green-400 border px-4 py-2">Interview</button>
+      <button class="struggling-btn text-red-400 border px-4 py-2">Rejected</button>
+     </div>
+
+    </div>
+
+    <!-- right site -->
+    <div>
+     <button class="btn-delete px-4"><i class="fa-regular fa-trash-can"></i></button>
+    </div>
+   </div>
+
+   <!-- card 6 -->
+   <div class="flex justify-between p-8 bg-white">
+    <!-- left site -->
+    <div class="space-y-6">
+     <div>
+      <h3 class="company-name text-2xl font-bold">MegaCorp Solutions</h3>
+      <p class="position-name">JavaScript Developerv</p>
+     </div>
+
+     <div class="flex gap-2">
+      <p class="salary">New York, NY
+       •
+       Full-time
+       •
+       $130,000 - $170,00</p>
+     </div>
+
+     <p class="change bg-base-300 w-[120px]">Not Applied</p>
+     <p class="notes">Build enterprise applications with JavaScript and modern frameworks. We offer competitive
+      compensation, health
+      insurance, and professional development opportunities.</p>
+
+     <div>
+      <button class="thriving-btn text-green-400 border px-4 py-2">Interview</button>
+      <button class="struggling-btn text-red-400 border px-4 py-2">Rejected</button>
+     </div>
+
+    </div>
+
+    <!-- right site -->
+    <div>
+     <button class="btn-delete px-4"><i class="fa-regular fa-trash-can"></i></button>
+    </div>
+   </div>
+
+   <!-- card 7 -->
+   <div class="flex justify-between p-8 bg-white">
+    <!-- left site -->
+    <div class="space-y-6">
+     <div>
+      <h3 class="company-name text-2xl font-bold">StartupXYZ</h3>
+      <p class="position-name">Full Stack Engineer</p>
+     </div>
+
+     <div class="flex gap-2">
+      <p class="salary">Remote
+       •
+       Full-time
+       •
+       $120,000 - $160,000</p>
+     </div>
+
+     <p class="change bg-base-300 w-[120px]">Not Applied</p>
+     <p class="notes">Join our fast-growing startup and work on our core platform. Experience with Node.js and React
+      required. Great benefits
+      and equity package included.</p>
+
+     <div>
+      <button class="thriving-btn text-green-400 border px-4 py-2">Interview</button>
+      <button class="struggling-btn text-red-400 border px-4 py-2">Rejected</button>
+     </div>
+
+    </div>
+
+    <!-- right site -->
+    <div>
+     <button class="btn-delete px-4"><i class="fa-regular fa-trash-can"></i></button>
+    </div>
+   </div>
+
+   <!-- card 8 -->
+   <div class="flex justify-between p-8 bg-white">
+    <!-- left site -->
+    <div class="space-y-6">
+     <div>
+      <h3 class="company-name text-2xl font-bold"> TechCorp Industries</h3>
+      <p class="position-name">Senior Frontend Developer</p>
+     </div>
+
+     <div class="flex gap-2">
+      <p class="salary">San Francisco, CA
+       •
+       Full-time
+       •
+       $130,000 - $175,000</p>
+     </div>
+
+     <p class="change bg-base-300 w-[120px]">Not Applied</p>
+     <p class="notes">We are looking for an experienced Frontend Developer to build scalable web applications using
+      React and TypeScript. You
+      will work with a talented team on cutting-edge projects.</p>
+
+     <div>
+      <button class="thriving-btn text-green-400 border px-4 py-2">Interview</button>
+      <button class="struggling-btn text-red-400 border px-4 py-2">Rejected</button>
+     </div>
+
+    </div>
+
+    <!-- right site -->
+    <div>
+     <button class="btn-delete px-4"><i class="fa-regular fa-trash-can"></i></button>
+    </div>
+
+   </div>
+
+
+
+  </section>
+
+
+ </main>
+
+
+
+
+
+
+
+
+
+
+
+
+ <script src="script.js"></script>
 </body>
+
 </html>
