--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body class="bg-base-300">
  <header class="w-[80%] mx-auto">
   <h1 class="text-5xl font-bold text-black-500 mb-4">Job Application Tracker</h1>
-  <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+  <div class="grid sm:grid-cols-1 md:grid-cols-3 gap-8">
    <div class="bg-white p-4">
     <p>Total</p>
     <p id="total" class="font-bold">0</p>
@@ -50,7 +50,7 @@
 
   <div class="flex flex-wrap">
     <div class="mb-5">
-      <button onclick="toggleStyle('all-filter-btn')" class="bg-accent text-white px-5 py-2"
+      <button onclick="toggleStyle('all-filter-btn')" class="bg-accent text-white px-5 py-2 cursor-pointer"
         id="all-filter-btn">All</button>
     
       <button onclick="toggleStyle('interview-filter-btn')" class="bg-white px-5 py-2"
@@ -97,7 +97,7 @@
       users worldwide.</p>
 
      <div>
-      <button class="interview-btn text-green-400 border px-4 py-2">Interview</button>
+      <button class="interview-btn text-green-400 border px-4 py-2 ">Interview</button>
       <button class="rejected-btn text-red-400 border px-4 py-2">Rejected</button>
      </div>
 
@@ -321,7 +321,7 @@
    </div>
 
    <!-- card 8 -->
-   <div class="flex justify-between p-8 bg-white">
+   <div class="flex flex-col gap-4 sm:flex-row justify-between p-8 bg-white">
     <!-- left site -->
     <div class="space-y-6">
      <div>
